--- a/example/src/WebApi/Properties/launchSettings.json
+++ b/example/src/WebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchBrowser": true,
       "launchUrl": "",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "macOS": {
