--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -18,6 +18,31 @@
     "SecretId": "some-secret-id",
     "SecretVersionId": "1"
   },
+  "EncryptionServiceOptions": {
+    "ProjectId": "some-project-id",
+    "LocationId": "us",
+    "KeyRingId": "docs-api-np-keyring",
+    "KeyId": "docs-api-np-key"
+  },
+  "FooSubscriptionOptions": {
+    "ProjectId": "some-project-id",
+    "Name": "the-subscription-name"
+  },
+  "FooPublisherOptions": {
+    "ProjectId": "some-project-id",
+    "TopicName": "the-topic-name"
+  },
+  "CatFactsClientOptions": {
+    "BaseUri": "https://cat-fact.herokuapp.com/facts/",
+    "Resilience": {
+      "RetryAttempts": 6
+    },
+    "ApiKey": {
+      "HeaderValue": "[Don't Put Secrets in this file]",
+      "HeaderKey" : ""
+    },
+    "TimeoutMilliseconds": 15000
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
@@ -41,11 +66,5 @@
   },
   "ConnectionStrings": {
     "Postgres": "Host=localhost;User ID=cxp_user;Password=password;Port=5432;Database=cxp_entity_np;Pooling=true;"
-  },
-  "EncryptionServiceOptions": {
-    "ProjectId": "ah-crm-common-gke-np-105",
-    "LocationId": "us",
-    "KeyRingId": "docs-api-np-keyring",
-    "KeyId": "docs-api-np-key"
   }
 }
