--- a/test/framework/Framework.Logging.Tests/Framework.Logging.Tests.csproj
+++ b/test/framework/Framework.Logging.Tests/Framework.Logging.Tests.csproj
@@ -1,20 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>$(AppTargetFrameworkVersion)</TargetFramework>
     <AssemblyName>$(SolutionNamespaceRoot).Framework.Logging.Tests</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="AutoBogus" Version="$(AutoBogusVersion)" />
     <PackageReference Include="Serilog.Formatting.Compact.Reader" Version="$(SerilogFormattingCompactReaderVersion)" />
     <PackageReference Include="Serilog.Sinks.Map" Version="$(SerilogSinksDebugVersion)" />
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\..\..\example\WebApi\WebApi.csproj" />
+    <ProjectReference Include="..\..\..\example\src\WebApi\WebApi.csproj" />
   </ItemGroup>
-
 </Project>
