Subscriber flow control

--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -30,7 +30,8 @@
   },
   "FooPublisherOptions": {
     "ProjectId": "some-project-id",
-    "TopicName": "the-topic-name"
+    "TopicName": "the-topic-name",
+    "MaxMessageCount": 1
   },
   "CatFactsClientOptions": {
     "BaseUri": "https://cat-fact.herokuapp.com/facts/",
