Fix typo in documentation

--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -26,12 +26,12 @@
   },
   "FooSubscriptionOptions": {
     "ProjectId": "some-project-id",
-    "Name": "the-subscription-name"
+    "Name": "the-subscription-name",
+    "MaxMessageCount": 1
   },
   "FooPublisherOptions": {
     "ProjectId": "some-project-id",
-    "TopicName": "the-topic-name",
-    "MaxMessageCount": 1
+    "TopicName": "the-topic-name"
   },
   "CatFactsClientOptions": {
     "BaseUri": "https://cat-fact.herokuapp.com/facts/",
