--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -47,12 +47,13 @@
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
-      "Serilog.Formatting.Compact"
+      "Serilog.Expressions",
+      "HumanaEdge.Webcore.Core.Logging"
     ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning",
+        "Microsoft": "Debug",
         "System": "Warning"
       }
     },
@@ -60,7 +61,7 @@
       "0": {
         "Name": "Console",
         "Args": {
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+          "formatter": "HumanaEdge.Webcore.Core.Logging.StackdriverFormatter, HumanaEdge.Webcore.Core.Logging"
         }
       }
     }
