--- a/example/Directory.Build.props
+++ b/example/Directory.Build.props
@@ -2,5 +2,6 @@
     <Import Project="../Directory.Build.props"/>
   <PropertyGroup>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 </Project>
