Add sit and uat envs server urls to swagger gen

--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "OpenApi": {
-    "ServiceProductSuffix": "cxp",
+    "ServiceProductSuffix": "cxp/example",
     "ServiceDocumentationUrl": "https://gitlab.humanaedge.com/cxp/ah-cxp-enrollment-entity-service/-/blob/master/API.md",
     "AdditionalDescription": "additional description from appsettings.json file",
     "DocumentTitle": "Example API (from appsettings.json)"
