--- a/version.props
+++ b/version.props
@@ -26,6 +26,7 @@
   <PropertyGroup Label="Test framework versions">
     <CoverletVersion>2.9.0</CoverletVersion>
     <xUnitVersion>2.4.1</xUnitVersion>
+    <xUnitDependencyInjectionVersion>7.1.0</xUnitDependencyInjectionVersion>
     <JunitTestLoggerVersion>2.1.78</JunitTestLoggerVersion>
     <MoqVersion>4.14.0</MoqVersion>
     <MicrosoftNetTestSdkVersion>16.6.1</MicrosoftNetTestSdkVersion>
@@ -48,6 +49,7 @@
     <GooglePubSub>2.1.0</GooglePubSub>
     <MicroElementsSwashbuckleFluentValidation>3.0.0-rc.3</MicroElementsSwashbuckleFluentValidation>
     <NewtonsoftJsonVersion>12.0.3</NewtonsoftJsonVersion>
+    <RestSharpVersion>106.11.7</RestSharpVersion>
     <SerilogAspNetCoreVersion>3.2.0</SerilogAspNetCoreVersion>
     <SerilogExceptionsVersion>5.4.0</SerilogExceptionsVersion>
     <SerilogExpressionsVersion>1.0.0</SerilogExpressionsVersion>
