--- a/src/framework/Framework.Testing/Framework.Testing.csproj
+++ b/src/framework/Framework.Testing/Framework.Testing.csproj
@@ -5,15 +5,16 @@
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(MicrosoftExtensionsVersion)"/>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="$(MicrosoftExtensionsVersion)"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="$(MicrosoftExtensionsVersion)"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="$(MicrosoftExtensionsVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xunit.DependencyInjection" Version="$(xUnitDependencyInjectionVersion)"/>
-    <PackageReference Include="RestSharp" Version="$(RestSharpVersion)"/>
+    <PackageReference Include="Xunit.DependencyInjection" Version="$(xUnitDependencyInjectionVersion)" />
+    <PackageReference Include="RestSharp" Version="$(RestSharpVersion)" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\core\Core.Testing\Core.Testing.csproj"/>
+    <ProjectReference Include="..\..\core\Core.Testing\Core.Testing.csproj" />
+    <ProjectReference Include="..\Framework.SecretsManager\Framework.SecretsManager.csproj" />
   </ItemGroup>
 </Project>
