Tests have a dependency on the example WebApi
So the example WebApi must also be dual targeted.  The global.json will tell the program what version of the sdk to run.

--- a/example/src/Integration.CatFacts/Integration.CatFacts.csproj
+++ b/example/src/Integration.CatFacts/Integration.CatFacts.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>$(LibTargetFrameworkVersion)</TargetFramework>
+    <TargetFrameworks>$(TargetFramework50);$(LibTargetFramework)</TargetFrameworks>
     <AssemblyName>$(SolutionNamespaceRoot).Example.Integration.CatFacts</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
