--- a/test/core/Core.Telemetry.Tests/Core.Telemetry.Tests.csproj
+++ b/test/core/Core.Telemetry.Tests/Core.Telemetry.Tests.csproj
@@ -1,11 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>$(AppTargetFrameworkVersion)</TargetFramework>
+    <TargetFrameworks>$(TargetFramework31);$(TargetFramework50);</TargetFrameworks>
     <AssemblyName>$(SolutionNamespaceRoot).Core.Telemetry.Tests</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\core\Core.Telemetry\Core.Telemetry.csproj" />
-    <ProjectReference Include="..\..\..\src\core\Core.Testing\Core.Testing.csproj" />
   </ItemGroup>
 </Project>
