--- a/test/core/Core.Testing.Tests/Core.Testing.Tests.csproj
+++ b/test/core/Core.Testing.Tests/Core.Testing.Tests.csproj
@@ -1,11 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>$(AppTargetFrameworkVersion)</TargetFramework>
+    <TargetFrameworks>$(TargetFramework31);$(TargetFramework50)</TargetFrameworks>
     <AssemblyName>$(SolutionNamespaceRoot).Coe.Testing.Tests</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\src\core\Core.Testing\Core.Testing.csproj"/>
-  </ItemGroup>
 </Project>
 
