--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 # with GitLab Continuous Integration / Continuous Delivery.
 
 # ### Specify the Docker image
-image: mcr.microsoft.com/dotnet/core/sdk:3.1
+image: mcr.microsoft.com/dotnet/sdk:5.0
 
 variables:
   CONFIGURATION: Release
