--- a/example/src/Models.Immutable/Models.Immutable.csproj
+++ b/example/src/Models.Immutable/Models.Immutable.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>$(LibTargetFrameworkVersion)</TargetFramework>
+    <TargetFrameworks>$(TargetFramework50);$(LibTargetFramework)</TargetFrameworks>
     <AssemblyName>$(SolutionNamespaceRoot).Example.Models.Immutable</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
