--- a/test/framework/Framework.PubSub.Tests/Framework.PubSub.Tests.csproj
+++ b/test/framework/Framework.PubSub.Tests/Framework.PubSub.Tests.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>$(AppTargetFrameworkVersion)</TargetFramework>
+    <TargetFrameworks>$(TargetFramework31);$(TargetFramework50)</TargetFrameworks>
     <AssemblyName>$(SolutionNamespaceRoot).Framework.PubSub.Tests</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
     <ItemGroup>
-      <ProjectReference Include="..\..\..\src\core\Core.PubSub\Core.PubSub.csproj" />
       <ProjectReference Include="..\..\..\src\framework\Framework.PubSub\Framework.PubSub.csproj" />
       <ProjectReference Include="..\..\..\src\core\Core.PubSub\Core.PubSub.csproj" />
-      <ProjectReference Include="..\..\..\src\core\Core.Testing\Core.Testing.csproj" />
     </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Equals.Fody" Version="$(EqualsFodyVersion)" />
