--- a/version.props
+++ b/version.props
@@ -1,33 +1,40 @@
 <Project>
   <PropertyGroup Label="Package versioning">
-    <VersionPrefix>1.2.0</VersionPrefix>
+    <VersionPrefix>1.3.0</VersionPrefix>
     <VersionSuffix Condition="'$(Channel)' != ''">$(Channel)-$(BuildTimestamp)</VersionSuffix>
   </PropertyGroup>
   <PropertyGroup Label="Runtime, .NET Framework Version, etc">
-    <AppTargetFrameworkVersion>netcoreapp3.1</AppTargetFrameworkVersion>
-    <LibTargetFrameworkVersion>netstandard2.1</LibTargetFrameworkVersion>
+    <TargetFramework31>netcoreapp3.1</TargetFramework31>
+    <TargetFramework50>net5.0</TargetFramework50>
+    <LibTargetFramework>netstandard2.1</LibTargetFramework>
   </PropertyGroup>
   <PropertyGroup Label="Analyzers">
-    <StyleCopAnalyzerVersion>1.1.118</StyleCopAnalyzerVersion>
+    <StyleCopAnalyzerVersion>1.2.0-*</StyleCopAnalyzerVersion>
     <ThreadingAnalyzerVersion>16.4.45</ThreadingAnalyzerVersion>
     <MicrosoftCodeAnalysisCSharpVersion>3.6.0</MicrosoftCodeAnalysisCSharpVersion>
   </PropertyGroup>
-  <PropertyGroup Label="Microsoft library versions">
+  <PropertyGroup Label="Microsoft library versions old" Condition="'$(TargetFramework)' == '$(TargetFramework31)' or '$(TargetFramework)' == '$(LibTargetFramework)'">
+    <MicrosoftExtensionsVersion>3.1.6</MicrosoftExtensionsVersion>
+    <MicrosoftExtensionsDependencyModelVersion>2.0.4</MicrosoftExtensionsDependencyModelVersion>
+    <SystemComponentModelAnnotations>4.7.0</SystemComponentModelAnnotations>
+  </PropertyGroup>
+  <PropertyGroup Label="Microsoft library versions net5.0" Condition="'$(TargetFramework)' == '$(TargetFramework50)'">
+    <MicrosoftExtensionsVersion>5.0.0</MicrosoftExtensionsVersion>
+    <MicrosoftExtensionsDependencyModelVersion>5.0.0</MicrosoftExtensionsDependencyModelVersion>
+    <SystemComponentModelAnnotations>5.0.0</SystemComponentModelAnnotations>
+  </PropertyGroup>
+  <PropertyGroup Label="Microsoft library versions common">
     <AspNetCoreHostingVersion>2.2.7</AspNetCoreHostingVersion>
     <XmlSerializerVersion>4.3.0</XmlSerializerVersion>
-    <ComponentModelAnnotations>4.5.0</ComponentModelAnnotations>
-    <MicrosoftExtensionsVersion>3.1.6</MicrosoftExtensionsVersion>
     <MicrosoftExtensionsPlatformAbstractionsVersion>1.1.0</MicrosoftExtensionsPlatformAbstractionsVersion>
-    <MicrosoftExtensionsDependencyModelVersion>2.0.4</MicrosoftExtensionsDependencyModelVersion>
-    <SystemTextJsonVersion>4.6.0</SystemTextJsonVersion>
-    <SystemComponentModelAnnotations>4.7.0</SystemComponentModelAnnotations>
+    <SystemTextJsonVersion>4.7.2</SystemTextJsonVersion>
     <MicrosoftAspNetCoreVersion>2.2.0</MicrosoftAspNetCoreVersion>
   </PropertyGroup>
   <PropertyGroup Label="Test framework versions">
     <CoverletVersion>2.9.0</CoverletVersion>
     <xUnitVersion>2.4.1</xUnitVersion>
     <xUnitDependencyInjectionVersion>7.1.0</xUnitDependencyInjectionVersion>
-    <JunitTestLoggerVersion>2.1.78</JunitTestLoggerVersion>
+    <JunitTestLoggerVersion>2.1.81</JunitTestLoggerVersion>
     <MoqVersion>4.14.0</MoqVersion>
     <MicrosoftNetTestSdkVersion>16.6.1</MicrosoftNetTestSdkVersion>
     <AutoBogusVersion>2.7.3</AutoBogusVersion>
@@ -47,6 +54,7 @@
     <GoogleCloudSecretManagerV1Version>1.1.0</GoogleCloudSecretManagerV1Version>
     <GoogleCloudStorageV1Version>3.3.0</GoogleCloudStorageV1Version>
     <GooglePubSub>2.1.0</GooglePubSub>
+    <GrpcCoreVersion>2.36.1</GrpcCoreVersion>
     <MicroElementsSwashbuckleFluentValidation>3.0.0-rc.3</MicroElementsSwashbuckleFluentValidation>
     <NewtonsoftJsonVersion>12.0.3</NewtonsoftJsonVersion>
     <RestSharpVersion>106.11.7</RestSharpVersion>
@@ -61,6 +69,7 @@
     <SerilogSinksConsoleVersion>3.1.1</SerilogSinksConsoleVersion>
     <SerilogSinksDebugVersion>1.0.1</SerilogSinksDebugVersion>
     <SerilogVersion>2.10.0</SerilogVersion>
+    <SerilogEnrichersSpanVersion>1.1.0</SerilogEnrichersSpanVersion>
     <StackdriverVersion>4.0.0</StackdriverVersion>
     <SwashbuckleFiltersVersion>5.1.2</SwashbuckleFiltersVersion>
     <SwashbuckleVersion>5.5.1</SwashbuckleVersion>
