--- a/src/core/Core.PubSub/Core.PubSub.csproj
+++ b/src/core/Core.PubSub/Core.PubSub.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core.Common\Core.Common.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Equals.Fody" Version="4.0.1" />
+  </ItemGroup>
 </Project>
