Structured logging of exceptions

--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -47,10 +47,11 @@
       "HumanaEdge.Webcore.Core.Logging"
     ],
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Override": {
-        "Microsoft": "Debug",
-        "System": "Warning"
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Microsoft.AspNetCore.Hosting.Internal.WebHost": "Information"
       }
     },
     "WriteTo": {
