--- a/src/core/Core.Web/Core.Web.csproj
+++ b/src/core/Core.Web/Core.Web.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>$(TargetFramework31);$(TargetFramework50)</TargetFrameworks>
+    <TargetFrameworks>$(TargetFramework31);$(TargetFramework50);$(LibTargetFramework)</TargetFrameworks>
     <AssemblyName>$(SolutionNamespaceRoot).Core.Web</AssemblyName>
     <RootNamespace>$(AssemblyName)</RootNamespace>
   </PropertyGroup>
