--- a/src/framework/Framework.Rest/Framework.Rest.csproj
+++ b/src/framework/Framework.Rest/Framework.Rest.csproj
@@ -5,6 +5,7 @@
       <RootNamespace>$(AssemblyName)</RootNamespace>
     </PropertyGroup>
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(MicrosoftExtensionsVersion)" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="$(MicrosoftExtensionsVersion)" />
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="$(MicrosoftExtensionsVersion)" />
     </ItemGroup>
