--- a/src/framework/Framework.Telemetry/Framework.Telemetry.csproj
+++ b/src/framework/Framework.Telemetry/Framework.Telemetry.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(MicrosoftExtensionsVersion)"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(MicrosoftExtensionsVersion)"/>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="$(MicrosoftExtensionsVersion)"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\core\Core.Common\Core.Common.csproj"/>
