--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -29,6 +29,11 @@
     "Name": "the-subscription-name",
     "MaxMessageCount": 1
   },
+  "BarSubscriptionOptions": {
+    "ProjectId": "some-project-id",
+    "Name": "the-subscription-name",
+    "MaxMessageCount": 2
+  },
   "FooPublisherOptions": {
     "ProjectId": "some-project-id",
     "TopicName": "the-topic-name"
