Exception Bucket for Pub Sub Message ESS-644

--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -27,7 +27,15 @@
   "FooSubscriptionOptions": {
     "ProjectId": "some-project-id",
     "Name": "the-subscription-name",
-    "MaxMessageCount": 1
+    "MaxMessageCount": 1,
+    "Resiliency": {
+      "MaxRetries": 2
+    },
+    "ExceptionStorage": {
+      "ApplicationName": "FooService",
+      "GcpBucket": "exception-bucket",
+      "GcpProject": "my-project"
+    }
   },
   "BarSubscriptionOptions": {
     "ProjectId": "some-project-id",
