--- a/version.props
+++ b/version.props
@@ -41,23 +41,14 @@
     <AutoFixtureVersion>4.11.0</AutoFixtureVersion>
     <FluentAssertionsVersion>5.10.3</FluentAssertionsVersion>
   </PropertyGroup>
-  <PropertyGroup Label="Third party libs">
-    <AutofacDependencyInjectionVersion>6.0.0</AutofacDependencyInjectionVersion>
-    <AutofacVersion>5.2.0</AutofacVersion>
-    <CorrelationIdVersion>3.0.0</CorrelationIdVersion>
-    <DestructuramaAttributedVersion>2.0.0</DestructuramaAttributedVersion>
-    <EqualsFodyVersion>4.0.1</EqualsFodyVersion>
-    <FluentAssertionsJsonVersion>5.5.0</FluentAssertionsJsonVersion>
-    <FluentAssertionsVersion>5.10.3</FluentAssertionsVersion>
-    <FluentValidationVersion>9.5.3</FluentValidationVersion>
+  <PropertyGroup Label="Google libraries">
+    <GoogleCloudStorageVersion>3.4.0</GoogleCloudStorageVersion>
     <GoogleCloudKmsVersion>2.0.0</GoogleCloudKmsVersion>
     <GoogleCloudSecretManagerV1Version>1.1.0</GoogleCloudSecretManagerV1Version>
-    <GoogleCloudStorageV1Version>3.3.0</GoogleCloudStorageV1Version>
     <GooglePubSub>2.1.0</GooglePubSub>
     <GrpcCoreVersion>2.36.1</GrpcCoreVersion>
-    <MicroElementsSwashbuckleFluentValidation>3.0.0-rc.3</MicroElementsSwashbuckleFluentValidation>
-    <NewtonsoftJsonVersion>12.0.3</NewtonsoftJsonVersion>
-    <RestSharpVersion>106.11.7</RestSharpVersion>
+  </PropertyGroup>
+  <PropertyGroup Label="Serilog">
     <SerilogAspNetCoreVersion>3.2.0</SerilogAspNetCoreVersion>
     <SerilogExceptionsVersion>5.4.0</SerilogExceptionsVersion>
     <SerilogExpressionsVersion>1.0.0</SerilogExpressionsVersion>
@@ -70,6 +61,19 @@
     <SerilogSinksDebugVersion>1.0.1</SerilogSinksDebugVersion>
     <SerilogVersion>2.10.0</SerilogVersion>
     <SerilogEnrichersSpanVersion>1.1.0</SerilogEnrichersSpanVersion>
+  </PropertyGroup>
+  <PropertyGroup Label="Third party libs">
+    <AutofacDependencyInjectionVersion>6.0.0</AutofacDependencyInjectionVersion>
+    <AutofacVersion>5.2.0</AutofacVersion>
+    <CorrelationIdVersion>3.0.0</CorrelationIdVersion>
+    <DestructuramaAttributedVersion>2.0.0</DestructuramaAttributedVersion>
+    <EqualsFodyVersion>4.0.1</EqualsFodyVersion>
+    <FluentAssertionsJsonVersion>5.5.0</FluentAssertionsJsonVersion>
+    <FluentAssertionsVersion>5.10.3</FluentAssertionsVersion>
+    <FluentValidationVersion>9.5.3</FluentValidationVersion>
+    <MicroElementsSwashbuckleFluentValidation>3.0.0-rc.3</MicroElementsSwashbuckleFluentValidation>
+    <NewtonsoftJsonVersion>12.0.3</NewtonsoftJsonVersion>
+    <RestSharpVersion>106.11.7</RestSharpVersion>
     <StackdriverVersion>4.0.0</StackdriverVersion>
     <SwashbuckleFiltersVersion>5.1.2</SwashbuckleFiltersVersion>
     <SwashbuckleVersion>5.5.1</SwashbuckleVersion>
