--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -53,6 +53,13 @@
     },
     "TimeoutMilliseconds": 15000
   },
+  "CacheOptions": {
+    "ConnectionString": "0.0.0.0:6379",
+    "CertificateAuthority": {
+      "ProjectId": "some-project",
+      "SecretId": "some-secret"
+    }
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
