--- a/src/core/Core.Common/Core.Common.csproj
+++ b/src/core/Core.Common/Core.Common.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftJsonVersion)" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="$(SystemComponentModelAnnotations)" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageReference Include="Equals.Fody" Version="$(EqualsFodyVersion)" />
   </ItemGroup>
 </Project>
