--- a/src/core/Core.Rest/Core.Rest.csproj
+++ b/src/core/Core.Rest/Core.Rest.csproj
@@ -13,5 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Core.Common\Core.Common.csproj" />
+    <ProjectReference Include="..\Core.Telemetry\Core.Telemetry.csproj" />
   </ItemGroup>
 </Project>
