--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -60,6 +60,10 @@
       "SecretId": "some-secret"
     }
   },
+  "CalculatorClientOptions": {
+    "BaseEndpoint": "http://www.dneonline.com/calculator.asmx",
+    "TimeoutMilliseconds": 12000
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
