--- a/src/core/Core.Web/Core.Web.csproj
+++ b/src/core/Core.Web/Core.Web.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core.Common\Core.Common.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="$(MicrosoftExtensionsVersion)" />
+  </ItemGroup>
 </Project>
