--- a/version.props
+++ b/version.props
@@ -18,12 +18,14 @@
     <MicrosoftExtensionsDependencyModelVersion>2.0.4</MicrosoftExtensionsDependencyModelVersion>
     <SystemComponentModelAnnotations>4.7.0</SystemComponentModelAnnotations>
     <StackExchangeRedisVersion>3.1.6</StackExchangeRedisVersion>
+    <SystemServiceModelVersion>4.8.1</SystemServiceModelVersion>
   </PropertyGroup>
   <PropertyGroup Label="Microsoft library versions net5.0" Condition="'$(TargetFramework)' == '$(TargetFramework50)'">
     <MicrosoftExtensionsVersion>5.0.0</MicrosoftExtensionsVersion>
     <MicrosoftExtensionsDependencyModelVersion>5.0.0</MicrosoftExtensionsDependencyModelVersion>
     <SystemComponentModelAnnotations>5.0.0</SystemComponentModelAnnotations>
     <StackExchangeRedisVersion>5.0.1</StackExchangeRedisVersion>
+    <SystemServiceModelVersion>4.8.1</SystemServiceModelVersion>
   </PropertyGroup>
   <PropertyGroup Label="Microsoft library versions common">
     <AspNetCoreHostingVersion>2.2.7</AspNetCoreHostingVersion>
