Bug fix ESS-894 - Redis Connectivity Issue

--- a/example/src/WebApi/Properties/launchSettings.json
+++ b/example/src/WebApi/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "launchUrl": "",
       "applicationUrl": "https://localhost:6001;http://localhost:6000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "test",
         "APP_ROOT": "/Users/%USER%/dev/approots/webcore"
       }
     },
@@ -33,7 +33,7 @@
       "launchUrl": "",
       "applicationUrl": "https://localhost:6001;http://localhost:6000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "test",
         "APP_ROOT": "%USERPROFILE%/dev/approots/webcore"
       }
     }
