--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -54,10 +54,10 @@
     "TimeoutMilliseconds": 15000
   },
   "CacheOptions": {
-    "ConnectionString": "0.0.0.0:6379",
+    "ConnectionString": "10.32.129.108:6378",
     "CertificateAuthority": {
-      "ProjectId": "some-project",
-      "SecretId": "some-secret"
+      "ProjectId": "sbx-poc-bryan-new-241",
+      "SecretId": "redis-secret"
     }
   },
   "CalculatorClientOptions": {
