--- a/src/framework/Framework.SecretsManager/Framework.SecretsManager.csproj
+++ b/src/framework/Framework.SecretsManager/Framework.SecretsManager.csproj
@@ -9,6 +9,8 @@
     <ProjectReference Include="..\..\core\Core.SecretsManager\Core.SecretsManager.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="$(MicrosoftExtensionsVersion)" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="$(MicrosoftExtensionsVersion)" />
