--- a/test/framework/Framework.SecretsManager.Tests/Framework.SecretsManager.Tests.csproj
+++ b/test/framework/Framework.SecretsManager.Tests/Framework.SecretsManager.Tests.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\framework\Framework.SecretsManager\Framework.SecretsManager.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(MicrosoftExtensionsVersion)" />
+  </ItemGroup>
 </Project>
