ESS-817 - Feature/roy/cloud trace context v2

--- a/src/framework/Framework.Rest/Framework.Rest.csproj
+++ b/src/framework/Framework.Rest/Framework.Rest.csproj
@@ -7,6 +7,8 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(MicrosoftExtensionsVersion)" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="$(MicrosoftExtensionsVersion)" />
+      <PackageReference Include="Microsoft.AspNetCore.Http" Version="$(MicrosoftAspNetCoreVersion)" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="$(MicrosoftAspNetCoreVersion)" />
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="$(MicrosoftExtensionsVersion)" />
     </ItemGroup>
     <ItemGroup>
