Immediately Ack Message

--- a/example/src/WebApi/appsettings.json
+++ b/example/src/WebApi/appsettings.json
@@ -40,7 +40,8 @@
   "BarSubscriptionOptions": {
     "ProjectId": "some-project-id",
     "Name": "the-subscription-name",
-    "MaxMessageCount": 2
+    "MaxMessageCount": 2,
+    "ImmediatelyAckMessage": true
   },
   "FooPublisherOptions": {
     "ProjectId": "some-project-id",
