--- a/src/framework/Framework.Soap/Framework.Soap.csproj
+++ b/src/framework/Framework.Soap/Framework.Soap.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\..\core\Core.Logging\Core.Logging.csproj" />
     <ProjectReference Include="..\..\core\Core.Soap\Core.Soap.csproj" />
     <ProjectReference Include="..\..\core\Core.Telemetry\Core.Telemetry.csproj" />
+    <ProjectReference Include="..\Framework.Telemetry\Framework.Telemetry.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
